--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -2,9 +2,9 @@ name: Golang VE CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
 
