--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -1,4 +1,4 @@
-name: Golang VE CI 
+name: Golang VE CI/CD
 
 on:
   push:
@@ -24,12 +24,30 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Notify Telegram
-      uses: yanzay/notify-telegram@v0.1.0
-      if : always()
-      with:
-        chat: ${{ secrets.chat }}
-        token: ${{ secrets.token }}
-        status: ${{ job.status }}
+  cd:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Docker login
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker build
+        run: docker build -t adan-bot .
+      - name: Docker tags
+        run: |
+          docker tag adan-bot golang-ve/adan-bot:${{ github.sha }}
+          docker tag adan-bot golang-ve/adan-bot:latest
+      - name: Docker push
+        run: |
+          docker push golang-ve/adan-bot:${{ github.sha }}
+          docker push golang-ve/adan-bot:latest
+      - name: Notify Telegram
+        uses: yanzay/notify-telegram@v0.1.0
+        if : always()
+        with:
+          chat: ${{ secrets.chat }}
+          token: ${{ secrets.token }}
+          status: ${{ job.status }}
     
   
