--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -26,12 +26,12 @@ jobs:
 
   cd:
     runs-on: ubuntu-latest
-    needs: build
+    needs: ci
     
     steps:
       - uses: actions/checkout@v3
       - name: Docker login
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run:  docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker build image
         uses: docker/build-push-action@v2
         with:
