--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -24,25 +24,40 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Notify Telegram
+      uses: yanzay/notify-telegram@v0.1.0
+      if : always()
+      with:
+        chat: ${{ secrets.chat }}
+        token: ${{ secrets.token }}
+        status: ${{ job.status }}
+
   cd:
     runs-on: ubuntu-latest
     needs: ci
     
     steps:
-      - uses: actions/checkout@v3
-      - name: Docker login
-        run:  docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker build image
-        uses: docker/build-push-action@v2
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker build and push
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_PASSWORD }}/adan-bot:${{ github.sha }}
-            ${{ secrets.DOCKER_PASSWORD }}/adan-bot:latest
-        env:
-            TELEGRAM_TOKEN: ${{ secrets.token }}
+            ${{ secrets.DOCKER_USER }}/adan-bot:${{ github.sha }}
+            ${{ secrets.DOCKER_USER }}/adan-bot:latest
+    
       - name: Notify Telegram
         uses: yanzay/notify-telegram@v0.1.0
         if : always()
