--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKER_USER }}/adan-bot:${{ github.sha }}
