--- a/.github/workflows/golanVE-ci.yml
+++ b/.github/workflows/golanVE-ci.yml
@@ -1,6 +1,4 @@
-name: Golang VE CI/CD
-
-on:
+name: Golang VE CI on:
   push:
     branches: [ "main" ]
   pull_request:
@@ -31,35 +29,3 @@ jobs:
         chat: ${{ secrets.chat }}
         token: ${{ secrets.token }}
         status: ${{ job.status }}
-
-  cd:
-    runs-on: ubuntu-latest
-    needs: ci
-    
-    steps:
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USER }}/adan-bot:${{ github.sha }}
-            ${{ secrets.DOCKER_USER }}/adan-bot:latest
-    
-      - name: Notify Telegram
-        uses: yanzay/notify-telegram@v0.1.0
-        if : always()
-        with:
-          chat: ${{ secrets.chat }}
-          token: ${{ secrets.token }}
-          status: ${{ job.status }}
