--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
           token: ${{ secrets.token }}
           status: ${{ job.status }}
 
-  deploy:
-    name: Deployment
+  build-image:
+    name: Build Image for Deployment
     needs: ci
     runs-on: ubuntu-latest
     env:
@@ -66,8 +66,15 @@ jobs:
       - name: Get source code
         uses: actions/checkout@v4
 
-      - name: "Build and push Docker image ('latest')"
+      - name: Login to Github Container Registry ( A.K.A. ghcr.io )
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ SECRETS.GITHUB_TOKEN }}
+
+      - name: "Build and push Docker image to Github Container Registry('latest')"
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker build -t $DOCKER_IMAGE .
-          docker push $DOCKER_IMAGE
+          docker build . --tag  ghcr.io/$DOCKER_IMAGE:latest 
+          docker push ghcr.io/$DOCKER_IMAGE:latest
