--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
     needs: ci
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE: go-ve/adan-bot
+      DOCKER_IMAGE: golang-venezuela/adan-bot
     steps:
       - name: Get source code
         uses: actions/checkout@v4
@@ -76,5 +76,5 @@ jobs:
       - name: "Build and push Docker image to Github Container Registry('latest')"
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker build . --tag  ghcr.io/Golang-Venezuela/$DOCKER_IMAGE:latest 
-          docker push ghcr.io/Golang-Venezuela/$DOCKER_IMAGE:latest
+          docker build . --tag  ghcr.io/$DOCKER_IMAGE:latest 
+          docker push ghcr.io/$DOCKER_IMAGE:latest
