--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,5 +76,5 @@ jobs:
       - name: "Build and push Docker image to Github Container Registry('latest')"
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker build . --tag  ghcr.io/$DOCKER_IMAGE:latest 
-          docker push ghcr.io/$DOCKER_IMAGE:latest
+          docker build . --tag  ghcr.io/euler-b/$DOCKER_IMAGE:latest 
+          docker push ghcr.io/euler-b/$DOCKER_IMAGE:latest
