--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,20 +61,20 @@ jobs:
     needs: ci
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE: ghcr.io/euler-b/golang-venezuela/adan-bot
+      DOCKER_IMAGE_NAME: ghcr.io/euler-b/golang-venezuela/adan-bot
     steps:
       - name: Get source code
         uses: actions/checkout@v4
 
       - name: "Login into Github Container Registry (a.k.a. ghcr.io)"
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CI_TOKEN_BOT}}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Build and push Docker image to Github Container Registry ('latest')"
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker build --tag $DOCKER_IMAGE:latest .
-          docker push $DOCKER_IMAGE:latest
+          docker build . --tag $DOCKER_IMAGE_NAME:latest 
+          docker push $DOCKER_IMAGE_NAME:latest
