--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
     name: Build Image for Deployment
     needs: ci
     runs-on: ubuntu-latest
+    permissions: write-all
     env:
       DOCKER_IMAGE_NAME: ghcr.io/golang-venezuela/adan-bot
     steps:
