fix(integration.yml): update golangci lint config file path from golangci.yml to .golangci.yml for correct configuration usage

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,7 +22,7 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.2.1
-          args: --config golangci.yml --timeout=5m ./...
+          args: --config .golangci.yml --timeout=5m ./...
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
